--- a/mine.html
+++ b/mine.html
@@ -1,8 +1,10 @@
 <html>
-<head>
-<title> hi </title>
-</head>
-<body>
-<h1> hello</h1>
-</body>
-<html>
+  <head>
+    <title>hi</title>
+  </head>
+  <body>
+    <h1>hello</h1>
+    <p>hello today</p>
+  </body>
+  <html></html>
+</html>
